# fraction_sem3.1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  x
.github/workflows/: ci.yml
include/: fraction.h
src/: fraction.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
